# lut-rust

./: .gitignore  README.md
Anytime course_ Rust Programming 2025-26_20251025_1208/1_General/: 2_Tehtävien palautus.html  4_Returning the assignments.html
Anytime course_ Rust Programming 2025-26_20251025_1208/2_Fundamentals of Rust/: 2_Viikko 1 tehtäväkuvaukset.html  4_Week 1 task descriptions.html
Anytime course_ Rust Programming 2025-26_20251025_1208/4_Object-Oriented programming in Rust/: 1_Olio-Ohjelmointi Rustissa.html  3_Object-Oriented programming in Rust.html
Anytime course_ Rust Programming 2025-26_20251025_1208/5_Threads/: 1_Komentorivin käyttö ja Threadsit.html  3_Command line usage and Threads.html
Anytime course_ Rust Programming 2025-26_20251025_1208/7_Course project/: 1_Rust_courseproject_report_template.docx
course_project/: readme.md
course_project/client/: package-lock.json  package.json
course_project/server/: .env.example  .gitignore  Cargo.toml  readme.md
course_project/server/src/: app.rs  main.rs
course_project/server/src/middleware/: logger.rs
course_project/server/src/models/: cart.rs  mod.rs  product.rs
course_project/server/src/routes/: cart_route.rs  health.rs  mod.rs  products.rs
course_project/server/src/utils/: tracing.rs
week1/: exercises.md
week1/exercise_4/: Cargo.toml
week1/exercise_5/: Cargo.toml
week2/: tehtavat.md
week2/ch2_pt6_lifetime/: Cargo.toml
week2/task_5/: receipt.txt
week3/: tehtavat3.md
week4/: tehtavat.md
week5/: tehtavat.md
week5/task1/: Cargo.toml
week5/task2/: Cargo.toml
(+108 files in other folders)
