[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
dotenvy = "0.15.7"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.19"
reqwest = { version = "0.12.24", features = ["json"] }
tower-http = { version = "0.6.6", features = ["cors"] }
